Add tag CRUD API
